# ChangeLog for sys-apps/portage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1342 2013/08/12 23:49:20 zmedico Exp $

*portage-2.2.0 (12 Aug 2013)

  12 Aug 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0.ebuild,
  -portage-2.2.0_alpha196.ebuild:
  2.2.0 version bump. This fixes bug #248603 (suppress missing repo_name warning
  for /usr/local/portage), bug #309941 (document make.conf source keyword), bug
  #388781 (clarify /etc/portage/env docs), bug #449918 (hyperlink to blocker
  documentation in file collision message) bug #462802 (correct ebuild.sh path
  in man pages), and bug #480586 (suppress warnings for desktop files with
  NotShowIn Pantheon). This also includes a fix for compatibility Python 3.4.
  Bug #472632 tracks all bugs fixed since portage-2.1.12.2.

  12 Aug 2013; Zac Medico <zmedico@gentoo.org> portage-2.1.13.7.ebuild,
  portage-2.2.0_alpha196.ebuild:
  Use find -mindepth 1 for userpriv DISTDIR update.

*portage-2.2.0_alpha196 (08 Aug 2013)

  08 Aug 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha196.ebuild,
  -portage-2.2.0_alpha191.ebuild, -portage-2.2.0_alpha195.ebuild:
  2.2.0_alpha195 version bump. This includes all of the fixes in 2.1.13.7. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.13.7 (08 Aug 2013)

  08 Aug 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.13.7.ebuild,
  -portage-2.1.13.2.ebuild, -portage-2.1.13.6.ebuild:
  2.1.13.7 version bump. This fixes bug bug #480192 (fix ._cfg command????
  command format in emerge man page), bug #480244 (change repoman
  preserve_old_lib message), and  bug #480254 (repoman KeyError triggered by
  standalone non-gentoo repo). Bug #472632 tracks all bugs fixed since
  portage-2.1.12.2.

*portage-2.2.0_alpha195 (07 Aug 2013)

  07 Aug 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha195.ebuild,
  -portage-2.2.0_alpha194.ebuild: