@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1342 2013/08/12 23:49:20 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1343 2013/08/13 00:59:44 zmedico Exp $
+
+  13 Aug 2013; Zac Medico <zmedico@gentoo.org> portage-2.2.0.ebuild:
+  Use EAPI 2 for better upgrade path.
 
 *portage-2.2.0 (12 Aug 2013)
 
